test/asm/bracketed-symbols.err
ERROR: bracketed-symbols.asm(16):
    Print types are only allowed for numbers
ERROR: bracketed-symbols.asm(20):
    "Label" does not have a constant value
